# squaredown

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: publish.yml
squaredown/: __init__.py  catalog.py  config.py  connector.py  datetime_utils.py  i_logger.py  i_mongodb.py  i_square.py  itemizations.py  locations.py  logging_config.json  orders.py  payouts.py  report_data.py
tests/: test_catalog.py  test_config.py  test_connector.py  test_datetime_utils.py  test_i_mongodb.py  test_i_square.py  test_init.py  test_orders.py
