[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "squaredown"
author = "Jason Romano"
author-email = "aracnid@gmail.com"
home-page = "https://github.com/lakeannebrewhouse/squaredown"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires-python = "~=3.8"
requires = [
    "aracnid-logger",
    "aracnid-utils",
    "dnspython ~=2.0",
    "pymongo ~=3.11",
    "squareup ~=6.3"
]
keywords = "square,mongodb"

[tools.flit.metadata.requires-extra]
test = ["pytest ~=6.0"]
build = ["flit ~=2.3"]
dev = ["pylint ~=2.6"]