[tool.poetry]
name = "squaredown"
version = "1.6.2"
description = "Customized Square interface"
authors = ["Jason Romano <aracnid@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aracnid/squaredown"
keywords = ["python", "square", "mongodb"]
packages = [{include = "squaredown"}]

[tool.poetry.dependencies]
python = "^3.10"
aracnid-config = "^1.0"
aracnid-logger = "^1.0"
aracnid-utils = "^1.0"
i-mongodb = "^2.0"
squareup = "^19.1"
tqdm = "^4.64"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0"
pytest = "^7.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov-report xml:tests/cov.xml --cov=squaredown tests/"
#addopts = "-p no:warnings
log_cli = true
log_cli_level = "DEBUG"

[tool.pylint.'MESSAGES CONTROL']
disable = "logging-fstring-interpolation"
